// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductListingComponent renders correctly on desktop 1`] = `
<div
  class="sc-eauhAA jAyDhK"
>
  <div
    class="sc-fFoeYl fCIluL"
  >
    <div
      class="sc-blHHSb kscHbD"
    >
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/71g2ednj0JL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/81QpkIctqPL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/71K7Q4FpguL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <video
          class="sc-khLCKb iFBhps"
          controls=""
          src="https://storage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-gQaihK fyYRag"
  >
    <div
      class="sc-iuUfFv fdtKHa"
    >
      <div
        class="sc-dprtRQ hRaLoZ"
      >
        <h1>
          Product Title
        </h1>
        <p>
          Description description description description description description description description description description description description description description description description description description
        </p>
        <button
          class="sc-epnzzT loxPQX"
        >
          Share Interest
        </button>
      </div>
      <div
        class="sc-eUlrpB dpSOKc"
      >
        <div
          class="sc-geXuza eLjYnS"
        >
          CAD $$$
        </div>
        <div>
          Negotiable / Non-negotiable
        </div>
        <div
          class="sc-hJRrWL eLJqsW"
        >
          <img
            alt="Seller Avatar"
            class="sc-fwzISk bdNknI"
            src="https://via.placeholder.com/50"
          />
          <div>
            <div>
              SELLER ID # 1234
            </div>
            <div
              class="sc-jtQUzJ eyljEe"
            >
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-ovuCP cKFxWO"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(184, 173, 173);"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
                <div
                  class="sc-eOzmre lfEzgV"
                  fillpercentage="29.999999999999982"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 576 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    />
                  </svg>
                </div>
              </div>
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(184, 173, 173);"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductListingComponent renders correctly on mobile 1`] = `
<div
  class="sc-eauhAA eZPQbO"
>
  <div
    class="sc-fFoeYl fCIluL"
  >
    <div
      class="sc-blHHSb kscHbD"
    >
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/71g2ednj0JL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/81QpkIctqPL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <img
          class="sc-ixGGxD fzPTpc"
          src="https://images-na.ssl-images-amazon.com/images/I/71K7Q4FpguL._AC_SL1500_.jpg"
        />
      </div>
      <div
        class="sc-fAUdSK jIA-DAh"
      >
        <video
          class="sc-khLCKb iFBhps"
          controls=""
          src="https://storage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-gQaihK fyYRag"
  >
    <div
      class="sc-iuUfFv htQkEW"
    >
      <div
        class="sc-dprtRQ hRaLoZ"
      >
        <h1>
          Product Title
        </h1>
        <p>
          Description description description description description description description description description description description description description description description description description description
        </p>
        <button
          class="sc-epnzzT loxPQX"
        >
          Share Interest
        </button>
      </div>
      <div
        class="sc-eUlrpB dpSOKc"
      >
        <div
          class="sc-geXuza eLjYnS"
        >
          CAD $$$
        </div>
        <div>
          Negotiable / Non-negotiable
        </div>
        <div
          class="sc-hJRrWL eLJqsW"
        >
          <img
            alt="Seller Avatar"
            class="sc-fwzISk bdNknI"
            src="https://via.placeholder.com/50"
          />
          <div>
            <div>
              SELLER ID # 1234
            </div>
            <div
              class="sc-jtQUzJ eyljEe"
            >
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-cEzcPc dQkltd"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
              </div>
              <div
                class="sc-ovuCP cKFxWO"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  style="color: rgb(184, 173, 173);"
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                  />
                </svg>
                <div
                  class="sc-eOzmre lfEzgV"
                  fillpercentage="29.999999999999982"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 576 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    />
                  </svg>
                </div>
              </div>
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(184, 173, 173);"
                viewBox="0 0 576 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
